--- a/index.html
+++ b/index.html
@@ -125,16 +125,41 @@
             </div>
         </div>
     </section>
+
+    <!-- Testimonials -->
+    <section id="testimonials">
+        <!-- Container to heading and testimonial blocks -->
+        <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+            <!-- Heading -->
+            <h2 class="text-4xl font-bold text-center">
+                What's Different About Manage?
+            </h2>
+            <!-- Testimonails COntainer -->
+            <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+                <!-- Testimonial 1 -->
+                <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img class="w-16 -mt-14" src="img/avatar-anisha.png" alt="">
+                    <h5 class="text-lg font-bold">Anisha Li</h5>
+                    <p class="text-sm text-darkGrayishBlue"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero placeat quas officiis autem iusto dolore laudantium perspiciatis eligendi architecto tempore. </p>
+                </div>
+                <!-- Testimonial 2 -->
+                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <img class="w-16 -mt-14" src="img/avatar-ali.png" alt="">
+                    <h5 class="text-lg font-bold">Ali Smith</h5>
+                    <p class="text-sm text-darkGrayishBlue"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero placeat quas officiis autem iusto dolore laudantium perspiciatis eligendi architecto tempore. </p>
+                </div>
+                <!-- Testimonial 3 -->
+                <div class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <img class="w-16 -mt-14" src="img/avatar-richard.png" alt="">
+                    <h5 class="text-lg font-bold">Richard Robb</h5>
+                    <p class="text-sm text-darkGrayishBlue"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero placeat quas officiis autem iusto dolore laudantium perspiciatis eligendi architecto tempore. </p>
+                </div>
+            </div>
+            <!-- Button -->
+            <div class="my-16">
+                <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
-
-<!-- <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
-    <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
-        <div class="flex items-center space-x-2">
-            <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">01</div>
-        </div>
-        <h3 class="text-base font-bold md:mb-4">
-            Track compnay-wide progress
-        </h3>
-    </div>
-</div> -->
