--- a/index.html
+++ b/index.html
@@ -175,5 +175,71 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-veryDarkBlue" id="footer">
+        <!-- Flex container -->
+        <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto sapce-y-8 md:flex-row md:space-y-0">
+            <!-- Logo and social links container -->
+            <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+                <div class="mx-auto my-6 text-center text-color md:hidden">
+                    Copyright &copy; 2022, All rights reserved
+                </div>
+                <!-- Logo -->
+                <div>
+                    <img src="img/logo-white.svg" class="h-8" alt="">
+                </div>
+                <!-- Social links container -->
+                <div class="flex justify-center space-x-4">
+                    <!-- Link 1 -->
+                    <a href="#">
+                        <img src="img/icon-facebook.svg" alt="" class="h-8">
+                    </a>
+                    <!-- Link 2 -->
+                    <a href="#">
+                        <img src="img/icon-youtube.svg" alt="" class="h-8">
+                    </a>
+                    <!-- Link 1 -->
+                    <a href="#">
+                        <img src="img/icon-twitter.svg" alt="" class="h-8">
+                    </a>
+                    <!-- Link 1 -->
+                    <a href="#">
+                        <img src="img/icon-pinterest.svg" alt="" class="h-8">
+                    </a>
+                    <!-- Link 1 -->
+                    <a href="#">
+                        <img src="img/icon-instagram.svg" alt="" class="h-8">
+                    </a>
+                </div>
+            </div>
+            <!-- List(links) conatiner -->
+            <div class="flex justify-round space-x-32">
+                <!-- Container 1 -->
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Home</a>
+                    <a href="#" class="hover:text-brightRed">Pricing</a>
+                    <a href="#" class="hover:text-brightRed">Products</a>
+                    <a href="#" class="hover:text-brightRed">About</a>
+                </div>
+                <!-- Container 2 -->
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Careers</a>
+                    <a href="#" class="hover:text-brightRed">Community</a>
+                    <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+                </div>
+            </div>
+            <!-- Input Container -->
+            <div class="flex flex-col justify-between">
+                <form>
+                    <div class="flex space-x-3">
+                        <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder="Updates in your inbox">
+                        <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">GO</button>
+                    </div>
+                </form>
+                <div class="hidden text-white md:block">Copyright &copy; 2022, All rights Reserved</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
