--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto sapce-y-8 md:flex-row md:space-y-0">
             <!-- Logo and social links container -->
             <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
-                <div class="mx-auto my-6 text-center text-color md:hidden">
+                <div class="mx-auto my-6 text-center text-white md:hidden">
                     Copyright &copy; 2022, All rights reserved
                 </div>
                 <!-- Logo -->
